<resources>
    <string name="app_name">GeekbrainsMoviesApp</string>
    <string name="movies_list">Movies List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_favorites">Movies Favorites</string>
    <string name="movies_ratings">Movies Ratings</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="rating">Rating</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="error_load_data">Error load data</string>
    <string name="details_movie">Details movie</string>
    <string name="poster_movie">Poster movie</string>
    <string name="vote_average_ic">vote_average_ic</string>
    <string name="placeholder_time_min">%1$d min.</string>
    <string name="placeholder_vote_count">(%1$d)</string>
    <string name="placeholder_budget">Budget: %1$d $</string>
    <string name="placeholder_revenue">Revenue: %1$d $</string>
    <string name="placeholder_release_date">Release date: %1$s</string>
    <string name="placeholder_adult">Adult: %1$s</string>
    <string name="adult">Adult</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="note_action">note_action</string>
    <string name="contacts">Contacts</string>
    <string name="empty_phone">Empty phone</string>
    <string name="close">Close</string>
    <string name="no_permission_contacts">No permission to show your contacts</string>
    <string name="maps">Maps</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">marker start</string>
    <string name="free_version">Free version</string>
</resources>