<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rating"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/rating"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_baseline_people_alt_24"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />
</menu>