<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.geekbrainsmoviesapp.presentation.view.MoviesListFragment"
        android:label="@string/movies_list"
        tools:layout="@layout/movies_list_fragment" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.geekbrainsmoviesapp.presentation.view.FavoritesFragment"
        android:label="@string/movies_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_ratings"
        android:name="com.example.geekbrainsmoviesapp.presentation.view.RatingsFragment"
        android:label="@string/movies_ratings"
        tools:layout="@layout/fragment_ratings" />

</navigation>