<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.DetailsMovieFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingMovieItem">

            <TextView
                android:id="@+id/movie_title"
                style="@style/styleTitleCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_button_to_favorites"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title_original"
                style="@style/styleSubTitleCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_button_to_favorites"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <ImageButton
                android:id="@+id/movie_button_to_favorites"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                android:backgroundTint="@color/gray"
                android:contentDescription="@string/favorites"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movie_image_poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/poster_movie"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_original" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_image_poster" />

            <TextView
                android:id="@+id/movie_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres" />

            <TextView
                android:id="@+id/movie_vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_runtime" />

            <TextView
                android:id="@+id/movie_vote_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_vote_average"
                app:layout_constraintTop_toTopOf="@+id/movie_vote_average" />

            <ImageView
                android:id="@+id/movie_vote_average_ic"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/vote_average_ic"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintBottom_toBottomOf="@+id/movie_vote_count"
                app:layout_constraintLeft_toRightOf="@+id/movie_vote_count"
                app:layout_constraintTop_toTopOf="@+id/movie_vote_count"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_vote_average" />

            <TextView
                android:id="@+id/movie_revenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_budget" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_image_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_revenue" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/successState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="data" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="load" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="error" />

</androidx.constraintlayout.widget.ConstraintLayout>
